--- a/index.html
+++ b/index.html
@@ -627,13 +627,20 @@
                         showNotification('Please fill all expense fields correctly.', 'error');
                         return;
                     }
-                    currentExpenses.push(expense);
-                    saveExpenses(selectedYearMonth, currentExpenses);
-                    updateBudgetDisplay();
-                    updateExpenseLists();
-                    updateChart(currentExpenses);
+                    const expenseYearMonth = expense.dueDate.slice(0, 7);
+                    if (expenseYearMonth === selectedYearMonth) {
+                        currentExpenses.push(expense);
+                        saveExpenses(selectedYearMonth, currentExpenses);
+                        updateBudgetDisplay();
+                        updateExpenseLists();
+                        updateChart(currentExpenses);
+                    } else {
+                        let otherMonthExpenses = loadExpenses(expenseYearMonth);
+                        otherMonthExpenses.push(expense);
+                        saveExpenses(expenseYearMonth, otherMonthExpenses);
+                    }
                     expenseForm.reset();
-                    showNotification(`Expense "${expense.name}" added!`, 'success');
+                    showNotification(`Expense "${expense.name}" added successfully!`, 'success');
                 });
 
                 notesForm.addEventListener('submit', (e) => {
