--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <option value="Other">Other</option>
                     </select>
                     <input type="datetime-local" id="expense-due-date" class="input-style sm:col-span-1" required>
-                    <button type="submit" class="sm:col-span-2 w-full bg-green-700 hover:bg-green-800 text-white btn-primary py-2 px-6">Add Expense</button>
+                    <button type="submit" class="sm:col-span-2 w-full bg-green-700 hover:bg-green-800 text-white btn-primary py-2 px-6">Save Expense</button>
                 </form>
             </div>
         </div>
@@ -313,8 +313,11 @@
             }
 
             function getRelativeDueDate(dueDateString) {
+                if (!dueDateString) return 'No due date';
                 const now = new Date();
                 const dueDate = new Date(dueDateString);
+                if (isNaN(dueDate)) return 'Invalid date';
+
                 const diffTime = dueDate.getTime() - now.getTime();
                 const today = new Date();
                 today.setHours(0, 0, 0, 0);
@@ -628,26 +631,34 @@
                             paid: false,
                             createdAt: new Date().toISOString()
                         };
+
                         if (!expense.name || isNaN(expense.amount) || expense.amount <= 0 || !expense.dueDate) {
                             showNotification('Please fill all expense fields correctly.', 'error');
                             return;
                         }
+
                         const expenseYearMonth = expense.dueDate.slice(0, 7);
+                        const monthName = new Date(expenseYearMonth + '-02').toLocaleString('default', { month: 'long', year: 'numeric' });
+
                         if (expenseYearMonth === selectedYearMonth) {
                             currentExpenses.push(expense);
                             saveExpenses(selectedYearMonth, currentExpenses);
                             updateBudgetDisplay();
                             updateExpenseLists();
                             updateChart(currentExpenses);
+                            showNotification(`Expense "${expense.name}" saved!`, 'success');
                         } else {
                             let otherMonthExpenses = loadExpenses(expenseYearMonth);
                             otherMonthExpenses.push(expense);
                             saveExpenses(expenseYearMonth, otherMonthExpenses);
+                            // Provide clear feedback that the expense was saved to a different month
+                            showNotification(`Expense "${expense.name}" saved to ${monthName}`, 'success');
                         }
+                        
                         expenseForm.reset();
-                        showNotification(`Expense "${expense.name}" added successfully!`, 'success');
+
                     } catch (error) {
-                        showNotification(`Error adding expense: ${error.message}`, 'error');
+                        showNotification(`Error saving expense: ${error.message}`, 'error');
                     }
                 });
 
